A new 'earn achievements' permission has been added.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,15 @@
 
 Achievements 7.x-1.1, 2011-xx-XX
 --------------------------------
+ * A new permission, "Earn achievements", has been added.
+  * It is REQUIRED and NECESSARY for all roles that can unlock achievements.
+  * Core functions check for it so you shouldn't need it in your own code.
+  * If you think you need to check, use achievements_user_is_achiever().
+  * Removing this permission from a role does NOT delete data or ranks.
+  * It does stop, however, the collection of new data, points, or unlocks.
 
 
 Achievements 7.x-1.0, 2011-07-07
 --------------------------------
-  * First release for Drupal 7.x.
+ * First release for Drupal 7.x.
+
