--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 
 Achievements 7.x-1.1, 2011-xx-xx
 --------------------------------
+@todo Revise the README with the relevants from below.
+
  * Administrators can now manually give and take achievements from users.
   * It's problematic on progression-based achievements and internal statistics.
   * hook_achievements_info() gets 'storage' to define where statistics are kept.
