--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,12 +3,11 @@ Achievements 7.x-1.2, 2011-xx-xx
 --------------------------------
 
 * (in-progress) #6759: Support multiple achievement popups/fadeins
-* Make the counts on the block and the achievement leaderboard configurable.
-* Make it configurable whether achievements float to top of list.
-* storage_ should only serialize when it's a complex type.
-* Make a "relative" leaderboard with configurable amount of surroundings.
-* Create an "in the now" leaderboard of gains in a certain timeframe.
-* Add watchdog notice for each unlock.
+* (todo) Make the counts on the block and the achievement leaderboard configurable.
+* (todo) Make it configurable whether achievements float to top of list.
+* (todo) storage_ should only serialize when it's a complex type.
+* (todo) Make a "relative" leaderboard with configurable amount of surroundings.
+* (todo) Create an "in the now" leaderboard of gains in a certain timeframe.
 
  * Achievement unlock notifications are now JS fadeins and offline-able.
   * We no longer use drupal_set_message() to inform of an unlock.
@@ -19,6 +18,7 @@ Achievements 7.x-1.2, 2011-xx-xx
  * Block 'achievements-leaderboard' renamed with underscores not dashes.
   * If you're using this block, you'll need to place it again upon upgrade.
  * Fixed a few PHP warnings when a user has yet to unlock any achievements.
+ * Achievements are now logged in watchdog.
 
 
 Achievements 7.x-1.1, 2011-07-18
