--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,11 +3,11 @@ Achievements 7.x-1.2, 2011-xx-xx
 --------------------------------
 
 * (in-progress) #6759: Support multiple achievement popups/fadeins
-* (todo) Make the counts on the block and the achievement leaderboard configurable.
 * (todo) Make it configurable whether achievements float to top of list.
 * (todo) storage_ should only serialize when it's a complex type.
 * (todo) Make a "relative" leaderboard with configurable amount of surroundings.
 * (todo) Create an "in the now" leaderboard of gains in a certain timeframe.
+* (todo) Add variable deletion to the hook_uninstall().
 
  * Achievement unlock notifications are now JS fadeins and offline-able.
   * We no longer use drupal_set_message() to inform of an unlock.
@@ -15,10 +15,12 @@ Achievements 7.x-1.2, 2011-xx-xx
   * Unlock notifications now fade in and out at the window's bottom right.
   * We now track whether a user has seen an achievement unlock notification.
   * If they haven't, they will the next time they login or access the site.
+ * Leaderboard top rank counts can now be tweaked in the relevant configs.
+  * This is in preparation for "relative leaderboards" planned for 7.x-1.3.
  * Block 'achievements-leaderboard' renamed with underscores not dashes.
   * If you're using this block, you'll need to place it again upon upgrade.
  * Fixed a few PHP warnings when a user has yet to unlock any achievements.
- * Achievements are now logged in watchdog.
+ * Achievement unlocks are now logged in watchdog.
 
 
 Achievements 7.x-1.1, 2011-07-18
