--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,12 +1,14 @@
 
+Achievements 7.x-1.3, 2011-xx-xx
+--------------------------------
+* (todo) Make a "relative" leaderboard with configurable amount of surroundings.
+* (todo) Create an "in the now" leaderboard of gains in a certain timeframe.
+
+
 Achievements 7.x-1.2, 2011-xx-xx
 --------------------------------
 
-* (in-progress) #6759: Support multiple achievement popups/fadeins
-* (todo) Make it configurable whether achievements float to top of list.
 * (todo) storage_ should only serialize when it's a complex type.
-* (todo) Make a "relative" leaderboard with configurable amount of surroundings.
-* (todo) Create an "in the now" leaderboard of gains in a certain timeframe.
 
  * Achievement unlock notifications are now JS fadeins and offline-able.
   * We no longer use drupal_set_message() to inform of an unlock.
@@ -16,6 +18,9 @@ Achievements 7.x-1.2, 2011-xx-xx
   * If they haven't, they will the next time they login or access the site.
  * Leaderboard top rank counts can now be tweaked in the relevant configs.
   * This is in preparation for "relative leaderboards" planned for 7.x-1.3.
+ * Unlocked achievements on user/#/achievements can now be unsorted.
+  * That is, instead of "move to top" they can remain "as defined in code".
+  * Defaults to "move to top". Config at admin/config/people/achievements.
  * Block 'achievements-leaderboard' renamed with underscores not dashes.
   * If you're using this block, you'll need to place it again upon upgrade.
  * Fixed a few PHP warnings when a user has yet to unlock any achievements.
