The achievements/leaderboard is now a paged view not a set limit.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,13 +2,27 @@
 Achievements 7.x-1.3, 2011-xx-xx
 --------------------------------
 * (todo) Make a "relative" leaderboard with configurable amount of surroundings.
+ * adding relative leaderboards should be an additional html table, not added to existing.
+  * so, we get the user's position (1 query, existing)
+  * we get the number of users before him (2 queries, existing)
+  * SELECT * FROM achievement_totals ORDER BY points ASC, timestamp ASC LIMIT $rank - 2, 5
+  * then we do a third query that says "start at row $rank - 5 and get 10 results" (assuming $nearby = 5)
+ * relative leaderboard count option to block and admin pref.
+ * admin pref: whether to show relative leaderboard on every pager page.
+ * achievements/leaderboard/ex-comment-count-1 is broken due to achievement_totals_user rewrite.
 * (todo) Go through and add hooks and alters for the various thingies.
+* (todo) Add a "get latest badge" thing for lookups, add to leaderboard?
 
+ * The achievements/leaderboard is now a paged view, not a set limit.
+  * Control number of ranks per page at admin/config/people/achievements/.
+ * achievements_totals() no longer exists; moved inline to leaderboard page.
+ * achievements_totals_user() has been rewritten with different parameters.
  * We now load all of a user's unlocks in achievements_unlocked_already().
   * This is then cached for all future lookups during that page load.
   * a_u_a and a_u can be called a lot per page for heavy achievement sites.
   * Loading all and caching is better, performance-wise, then lots of singles.
  * Issue #1274350 by makononov: added query tags for the leaderboards.
+
 
 Achievements 7.x-1.2, 2011-09-07
 --------------------------------
