--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,10 +1,12 @@
 
 Achievements 7.x-1.3, 2011-xx-xx
 --------------------------------
-* (todo) Go through and add hooks and alters for the various thingies. Doc.
 * (todo) Add a "get latest badge" thing for lookups, add to leaderboard?
 
-
+ * The following hooks have been added. See achievements.api.php for details:
+  * hook_achievements_info_alter() - modify the achievement information.
+  * hook_achievements_unlocked() - respond to achievement unlocks.
+  * hook_achievements_locked() - respond to a user losing an achievement.
  * Relative leaderboards have been added.
   * The block and global leaderboard can now show user-specific stats.
   * The current user's ranking can be displayed, along with "nearby" users.
