--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,15 @@
 
+Achievements 7.x-1.4, 2011-XX-XX
+--------------------------------
+ * (todo) Write up a "Getting started" part of the README?
+ * (todo) Add some links for good achievement design?
+
+ * Achievement leaderboards can be altered via hook_achievements_leaderboard().
+  * Lets you add new table columns or heavily modify leaderboard display.
+  * Context (type of leaderboard, block, etc.) and raw data is passed.
+  * See achievements.api.php for full details about the new hook.
+
+
 Achievements 7.x-1.3, 2011-09-29
 --------------------------------
  * The following hooks have been added. See achievements.api.php for details:
