--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,7 +4,7 @@ Achievements 7.x-1.4, 2011-XX-XX
  * (todo) Write up a "Getting started" part of the README?
  * (todo) Add some links for good achievement design?
 
- * Achievement leaderboards can be altered via hook_achievements_leaderboard().
+ * New hook added: hook_achievements_leaderboard_alter().
   * Lets you add new table columns or heavily modify leaderboard display.
   * Context (type of leaderboard, block, etc.) and raw data is passed.
   * See achievements.api.php for full details about the new hook.
