"image_raw" added to achievement themes for the context-aware image path.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Achievements 7.x-1.4, 2011-XX-XX
  * (todo) Write up a "Getting started" part of the README?
  * (todo) Add some links for good achievement design?
 
+ * "image_raw" added to achievement themes for the context-aware image path.
  * "achievement-leaderboard-top-rank" CSS class added to top 3 rank rows.
  * "achievement-leaderboard-top-rank-[123]" CSS class added to top 3 rank rows.
  * theme_achievements_group_wrapper() added (wraps around user/#/achievements).
