--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,9 +1,12 @@
 
-Achievements 7.x-1.4, 2011-XX-XX
+Achievements 7.x-1.5, 2011-XX-XX
 --------------------------------
- * (todo) Write up a "Getting started" part of the README?
  * (todo) Add some links for good achievement design?
+ * (todo) Allow users to choose if they can opt-out of achievements.
 
+
+Achievements 7.x-1.4, 2011-11-10
+--------------------------------
  * achievement-latest-unlock.tpl.php added and used in the leaderboard.
  * All template files have been moved to templates/ subdirectory.
  * Most .tpl.php $variables are now render arrays instead of strings.
