A new and optional submodule is added: achievements_pointless.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,14 @@ Achievements 7.x-1.5, 2011-XX-XX
  * (todo) Add some links for good achievement design?
  * (todo) Allow users to choose if they can opt-out of achievements.
 
+ * If 'points' is left undefined for an achievement, default to 0.
+ * A new and optional submodule is added: achievements_pointless.
+  * The module removes all the default competitive elements and display.
+  * With a non-competitive environment, it's about challenging yourself.
+  * All access to leaderboard pages and the default block is disabled.
+  * No ranking information or achievement points are displayed.
+  * user/#/achievements is the sole me-centric interface.
+
 
 Achievements 7.x-1.4, 2011-11-10
 --------------------------------
