--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,18 +2,30 @@
 Achievements 7.x-1.5, 2011-XX-XX
 --------------------------------
  * (todo) Add some links for good achievement design?
- * (todo) Allow users to choose if they can opt-out of achievements.
- * (todo) Use $content for presentation variables in the theme.
+ * (todo) We have an unindexed query in the two leaderboard functions.
+  * Solve with a new at.sort column, similar to comment.module threading.
+  * Store USER_TOTAL - 0.UNLOCK_YYMMDDHHSS. Sort on that, not at.timestamp.
+     100 points - 0.50 timestamp (really early in life)
+     100 points - 0.99 timestamp (later in life)
+      90 points - 0.10 (the earliest sap, but not a winner)
 
  * If 'points' is left undefined for an achievement, default to 0.
+ * The achievements leaderboard block is no longer cached. Sigh.
+ * #1341546: Mismatched leaderboard length defaults (thanks makononov).
+ * New hook added: hook_achievements_access_earn().
+  * Allows you to programmatically determine if a user can earn achievements.
+  * See the new submodule, achievements_optout, for an example of its use.
+ * A new and optional submodule is added: achievements_optout.
+  * Adds a new setting to a user's profile to opt-out of achievements.
+  * If selected, all that user's unlocks and statistics are deleted.
+  * If selected, that user's Achievements tab shows them opted-out.
+  * An opted-out user can unselect the checkbox to start earning anew.
  * A new and optional submodule is added: achievements_pointless.
   * The module removes all the default competitive elements and display.
   * With a non-competitive environment, it's about challenging yourself.
   * All access to leaderboard pages and the default block is disabled.
   * No ranking information or achievement points are displayed.
   * user/#/achievements is the sole me-centric interface.
- * The achievements leaderboard block is no longer cached.
- * #1341546: Mismatched leaderboard length defaults (thanks makononov).
 
 
 Achievements 7.x-1.4, 2011-11-10
