--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ Achievements 7.x-1.5, 2011-XX-XX
      100 points - 0.99 timestamp (later in life)
       90 points - 0.10 (the earliest sap, but not a winner)
 
+ * Accept user IDs as well as names for manual achievement (un)?locking.
  * If 'points' is left undefined for an achievement, default to 0.
  * The achievements leaderboard block is no longer cached. Sigh.
  * #1341546: Mismatched leaderboard length defaults (thanks makononov).
