--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
 
-Achievements 7.x-1.5, 2011-XX-XX
+Achievements 7.x-1.5, 2012-XX-XX
 --------------------------------
  * (todo) Add some links for good achievement design?
  * (todo) We have an unindexed query in the two leaderboard functions.
@@ -10,7 +10,14 @@ Achievements 7.x-1.5, 2011-XX-XX
       90 points - 0.10 (the earliest sap, but not a winner)
 
  * (todo) add optout to README
+ * (todo) Latest patches in the issue queue.
+ * (todo) Add "invisible". Distinguish between "secret" in README/API.
 
+ * API CHANGE! API CHANGE! API CHANGE! API CHANGE! API CHANGE! API CHANGE!
+  * If you have any 'hidden' type achievements, retype them to 'secret'.
+  * "secret achievement" is more commonly known than "hidden achievement".
+  * "secret" reads better with the newly available "invisible" type (below).
+  * IF YOU DON'T RETYPE, HIDDEN ACHIEVEMENTS WILL BE EXPOSED TO USERS.
 
  * Per-load unlocks cache is now updated after new achievement unlocks.
  * Accept user IDs as well as names for manual achievement (un)?locking.
