Issue #1396776 by jhedstrom: Allow unlocked timestamp to be passed.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -46,6 +46,7 @@ Achievements 7.x-1.5, 2012-XX-XX
  * If 'points' is left undefined for an achievement, default to 0.
  * The achievements leaderboard block is no longer cached. Le sigh.
  * #1341546: Mismatched leaderboard length defaults (thanks makononov).
+ * #1396776: Allow unlocked timestamp to be passed (thanks jhedstrom).
 
 
 Achievements 7.x-1.4, 2011-11-10
