--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,5 @@
 
-Achievements 7.x-1.5, 2012-05-01
+Achievements 7.x-1.6, 2012-XX-XX
 --------------------------------
  * (todo) Add some links for good achievement design?
  * (todo) We have an unindexed query in the two leaderboard functions.
@@ -9,6 +9,9 @@ Achievements 7.x-1.5, 2012-05-01
      100 points - 0.99 timestamp (later in life)
       90 points - 0.10 (the earliest sap, but not a winner)
 
+
+Achievements 7.x-1.5, 2012-05-01
+--------------------------------
  * API CHANGE! API CHANGE! API CHANGE! API CHANGE! API CHANGE! API CHANGE!
   * If you have any 'hidden' type achievements, retype them to 'secret'.
   * "secret achievement" is more commonly known than "hidden achievement".
